vercel.json updated

--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
     "builds": [
       {
-        "src": "api/server.js",
+        "src": "server.js",
         "use": "@vercel/node"
       },
       {
@@ -16,7 +16,7 @@
         "dest": "public/index.html"
       },
       {
-        "src": "/socket.io",
+        "src": "/(.*)",
         "dest": "/server.js"
       }
     ]
